// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<a
  className="Command__CommandContainer-sc-13akgtp-0 coWMio"
  id={null}
  label="Print"
  onClick={null}
  title="Print"
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-print fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD Command__CommandIcon-sc-13akgtp-2 kHbmnU"
    color={null}
    data-icon="print"
    data-prefix="far"
    focusable="false"
    fontSize="inherit"
    id={null}
    role="img"
    style={Object {}}
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M400 264c-13.25 0-24 10.74-24 24 0 13.25 10.75 24 24 24s24-10.75 24-24c0-13.26-10.75-24-24-24zm32-88V99.88c0-12.73-5.06-24.94-14.06-33.94l-51.88-51.88c-9-9-21.21-14.06-33.94-14.06H110.48C93.64 0 80 14.33 80 32v144c-44.18 0-80 35.82-80 80v128c0 8.84 7.16 16 16 16h64v96c0 8.84 7.16 16 16 16h320c8.84 0 16-7.16 16-16v-96h64c8.84 0 16-7.16 16-16V256c0-44.18-35.82-80-80-80zM128 48h192v48c0 8.84 7.16 16 16 16h48v64H128V48zm256 416H128v-64h256v64zm80-112H48v-96c0-17.64 14.36-32 32-32h352c17.64 0 32 14.36 32 32v96z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
  <label
    className="Typography__StyledLabel-sc-19auepv-0 gxLOic Command__CommandName-sc-13akgtp-1 dyKYpp"
    fontSize="0.876em"
    fontWeight={400}
    htmlFor={null}
    letterSpacing="0.2px"
  >
    Print
  </label>
</a>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 fyTJwb"
  id={null}
  rows={null}
>
  <a
    className="Command__CommandContainer-sc-13akgtp-0 coWMio"
    id={null}
    label="Active"
    onClick={null}
    title="Active"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD Command__CommandIcon-sc-13akgtp-2 kHbmnU"
      color={null}
      data-icon="circle"
      data-prefix="far"
      focusable="false"
      fontSize="inherit"
      id={null}
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
    <label
      className="Typography__StyledLabel-sc-19auepv-0 gxLOic Command__CommandName-sc-13akgtp-1 dyKYpp"
      fontSize="0.876em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0.2px"
    >
      Active
    </label>
  </a>
  <a
    className="Command__CommandContainer-sc-13akgtp-0 ctFLYo"
    id={null}
    label="Disabled"
    onClick={null}
    title="Disabled"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD Command__CommandIcon-sc-13akgtp-2 kHbmnU"
      color={null}
      data-icon="circle"
      data-prefix="far"
      focusable="false"
      fontSize="inherit"
      id={null}
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
    <label
      className="Typography__StyledLabel-sc-19auepv-0 gxLOic Command__CommandName-sc-13akgtp-1 dyKYpp"
      fontSize="0.876em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0.2px"
    >
      Disabled
    </label>
  </a>
</section>
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 fWmUnI"
  id={null}
  rows={null}
>
  <a
    className="Command__CommandContainer-sc-13akgtp-0 dJQJNT"
    id={null}
    label="Small"
    onClick={null}
    title="Small"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD Command__CommandIcon-sc-13akgtp-2 kHbmnU"
      color={null}
      data-icon="circle"
      data-prefix="far"
      focusable="false"
      fontSize="inherit"
      id={null}
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
    <label
      className="Typography__StyledLabel-sc-19auepv-0 gxLOic Command__CommandName-sc-13akgtp-1 dyKYpp"
      fontSize="0.876em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0.2px"
    >
      Small
    </label>
  </a>
  <a
    className="Command__CommandContainer-sc-13akgtp-0 coWMio"
    id={null}
    label="Standard"
    onClick={null}
    title="Standard"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD Command__CommandIcon-sc-13akgtp-2 kHbmnU"
      color={null}
      data-icon="circle"
      data-prefix="far"
      focusable="false"
      fontSize="inherit"
      id={null}
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
    <label
      className="Typography__StyledLabel-sc-19auepv-0 gxLOic Command__CommandName-sc-13akgtp-1 dyKYpp"
      fontSize="0.876em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0.2px"
    >
      Standard
    </label>
  </a>
  <a
    className="Command__CommandContainer-sc-13akgtp-0 dNCibE"
    id={null}
    label="Large"
    onClick={null}
    title="Large"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD Command__CommandIcon-sc-13akgtp-2 kHbmnU"
      color={null}
      data-icon="circle"
      data-prefix="far"
      focusable="false"
      fontSize="inherit"
      id={null}
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
    <label
      className="Typography__StyledLabel-sc-19auepv-0 gxLOic Command__CommandName-sc-13akgtp-1 dyKYpp"
      fontSize="0.876em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0.2px"
    >
      Large
    </label>
  </a>
</section>
`;

exports[` 4`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 fyTJwb"
  id={null}
  rows={null}
>
  <a
    className="Command__CommandContainer-sc-13akgtp-0 coWMio"
    id={null}
    label="Icon-Left"
    onClick={null}
    title="Icon-Left"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD Command__CommandIcon-sc-13akgtp-2 kHbmnU"
      color={null}
      data-icon="circle"
      data-prefix="far"
      focusable="false"
      fontSize="inherit"
      id={null}
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
    <label
      className="Typography__StyledLabel-sc-19auepv-0 gxLOic Command__CommandName-sc-13akgtp-1 dyKYpp"
      fontSize="0.876em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0.2px"
    >
      Icon-Left
    </label>
  </a>
  <a
    className="Command__CommandContainer-sc-13akgtp-0 hJxjlU"
    id={null}
    label="Icon-Top"
    onClick={null}
    title="Icon-Top"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD Command__CommandIcon-sc-13akgtp-2 kHbmnU"
      color={null}
      data-icon="circle"
      data-prefix="far"
      focusable="false"
      fontSize="inherit"
      id={null}
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
    <label
      className="Typography__StyledLabel-sc-19auepv-0 gxLOic Command__CommandName-sc-13akgtp-1 dyKYpp"
      fontSize="0.876em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0.2px"
    >
      Icon-Top
    </label>
  </a>
  <a
    className="Command__CommandContainer-sc-13akgtp-0 gmZLNs"
    id={null}
    label="Icon-Right"
    onClick={null}
    title="Icon-Right"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD Command__CommandIcon-sc-13akgtp-2 kHbmnU"
      color={null}
      data-icon="circle"
      data-prefix="far"
      focusable="false"
      fontSize="inherit"
      id={null}
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
    <label
      className="Typography__StyledLabel-sc-19auepv-0 gxLOic Command__CommandName-sc-13akgtp-1 dyKYpp"
      fontSize="0.876em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0.2px"
    >
      Icon-Right
    </label>
  </a>
</section>
`;
